Bug #55754 - Only variables should be passed by reference for ZEND_SEND_PREFER_REF params